tests/snapshots/snapshots__pipeline@errors_ctl_poly.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/errors_ctl_poly.pr
---
== tokens ==
VOpen Effect UIdent("Bail") VOpen Ctl Ident("bail") LParen KwString RParen Colon Ident("a") VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("r") Eq VOpen Handle Ident("bail") LParen StringLit("nope") RParen With VOpen Ident("bail") LParen Ident("m") Comma Ident("k") RParen FatArrow Ident("k") LParen Int(IntLit { value: 0, suffix: None }) RParen VSemi Return Ident("v") FatArrow Ident("v") VClose VClose VSemi Ident("println") LParen Ident("r") RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Bail",
            params: [],
            ops: [
                EffOp {
                    name: "bail",
                    params: [
                        Str,
                    ],
                    ret: Var(
                        "a",
                    ),
                    grade: Many,
                },
            ],
            span: 0..34,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "r",
                    Spanned {
                        node: Handle(
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "bail",
                                        ),
                                        span: 69..73,
                                    },
                                    [
                                        Spanned {
                                            node: Str(
                                                "nope",
                                            ),
                                            span: 74..80,
                                        },
                                    ],
                                ),
                                span: 69..81,
                            },
                            [
                                Op(
                                    "bail",
                                    [
                                        "m",
                                    ],
                                    "k",
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "k",
                                                ),
                                                span: 107..108,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 109..110,
                                                },
                                            ],
                                        ),
                                        span: 107..111,
                                    },
                                ),
                                Return(
                                    "v",
                                    Spanned {
                                        node: Var(
                                            "v",
                                        ),
                                        span: 130..131,
                                    },
                                ),
                            ],
                        ),
                        span: 62..131,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 134..141,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 142..143,
                                },
                            ],
                        ),
                        span: 134..144,
                    },
                ),
                span: 50..144,
            },
            wheres: [],
            span: 36..144,
        },
    ],
}

== types ==
Type Error: op `bail` has a polymorphic return type and can only be handled by `final ctl`
   ╭─[ <source>:7:21 ]
   │
 7 │       bail(m, k) => k(0)
   │                     ──┬─  
   │                       ╰─── op `bail` has a polymorphic return type and can only be handled by `final ctl`
───╯
